@@ -18,14 +18,51 @@ dependencies {
 
 application {
     // Define the main class for the application.
-    // mainClass = 'owlngo.gui.Main'
-    mainClass = 'owlngo.gui.editor.Editor'
+    //mainClass = 'owlngo.gui.Main'
+    mainClass = 'owlngo.gui.playfield.GameScreenMain'
+    // mainClass = 'owlngo.gui.editor.Editor'
 
 }
 
 run {
     standardInput = System.in
 }
+
+/* TODO: Add a task like the template linked to the right main class for editor and welcome
+    screen.
+ */
+
+// This is a template for the game window
+task taskForGameScreen(type: JavaExec) {
+    doFirst   {
+        jvmArgs   =   [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls',
+                '--add-modules', 'javafx.fxml',
+                '--add-modules', 'javafx.graphics',
+                '--add-modules', 'javafx.base',
+                '--add-modules', 'javafx.swing',
+        ]
+    }
+    classpath = sourceSets.main.runtimeClasspath
+    mainClass = 'owlngo.gui.playfield.GameScreenMain'
+}
+
+task taskForWelcomeScreen(type: JavaExec) {
+    doFirst   {
+        jvmArgs   =   [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls',
+                '--add-modules', 'javafx.fxml',
+                '--add-modules', 'javafx.graphics',
+                '--add-modules', 'javafx.base',
+                '--add-modules', 'javafx.swing',
+        ]
+    }
+    classpath = sourceSets.main.runtimeClasspath
+    mainClass = 'owlngo.gui.playfield.WelcomeScreenMain'
+}
+
 
 repositories {
     // Use Maven Central for resolving dependencies.
@@ -69,8 +106,6 @@ spotless {
         lineEndings 'UNIX'
     }
 }
-
-
 
 javafx {
     version = "17.0.1"
